gateway-api/routes/gitea-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: devtools
spec:
  parentRefs:
    - name: util-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "gitea.util.lcl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-http
          port: 3000
