gateway-api/routes/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: identity
spec:
  parentRefs:
    - name: util-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "keycloak.util.lcl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
