gateway-api/routes/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: util-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "prometheus.gitops.lcl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-kube-prometheus-stack-prometheus
          port: 9090
