gateway-api/routes/webui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: ai
spec:
  parentRefs:
    - name: util-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "webui.util.lcl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 8080
